minor: Fixed z-index val  for overlay bg for page

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 2;
+    z-index: 3;
     background-color: var(--white-color);
     transition: background-color 0.4s ease;
 }
